remove relative links for assets

--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -18,8 +18,8 @@ import {VideoPlayer} from '@primer/react-brand'
 
 ```jsx live
 <VideoPlayer title="GitHub media player">
-  <VideoPlayer.Source src="/brand/assets/example.mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Source src="https://primer.github.io/brand/assets/example.mp4" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -30,8 +30,8 @@ import {VideoPlayer} from '@primer/react-brand'
   poster="https://primer.github.io/brand/assets/example-poster.png"
   title="GitHub media player"
 >
-  <VideoPlayer.Source src="/brand/assets/example.mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Source src="https://primer.github.io/brand/assets/example.mp4" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -39,8 +39,8 @@ import {VideoPlayer} from '@primer/react-brand'
 
 ```jsx live
 <VideoPlayer showBranding={false} title="GitHub media player">
-  <VideoPlayer.Source src="/brand/assets/example.mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Source src="https://primer.github.io/brand/assets/example.mp4" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -48,8 +48,8 @@ import {VideoPlayer} from '@primer/react-brand'
 
 ```jsx live
 <VideoPlayer visuallyHiddenTitle title="GitHub media player">
-  <VideoPlayer.Source src="/brand/assets/example.mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Source src="https://primer.github.io/brand/assets/example.mp4" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -66,10 +66,10 @@ import {VideoPlayer} from '@primer/react-brand'
   showFullScreenButton={false}
 >
   <VideoPlayer.Source
-    src="/brand/assets/example.mp4"
+    src="https://primer.github.io/brand/assets/example.mp4"
     type="video/mp4"
   />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -78,10 +78,10 @@ import {VideoPlayer} from '@primer/react-brand'
 ```jsx live
 <VideoPlayer title="GitHub media player" showControlsWhenPaused={false}>
   <VideoPlayer.Source
-    src="/brand/assets/example.mp4"
+    src="https://primer.github.io/brand/assets/example.mp4"
     type="video/mp4"
   />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -95,10 +95,10 @@ import {VideoPlayer} from '@primer/react-brand'
   showControlsWhenPaused={false}
 >
   <VideoPlayer.Source
-    src="/brand/assets/example.mp4"
+    src="https://primer.github.io/brand/assets/example.mp4"
     type="video/mp4"
   />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -110,10 +110,10 @@ import {VideoPlayer} from '@primer/react-brand'
   playIcon={() => <PlayIcon size={96} />}
 >
   <VideoPlayer.Source
-    src="/brand/assets/example.mp4"
+    src="https://primer.github.io/brand/assets/example.mp4"
     type="video/mp4"
   />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
 
@@ -140,10 +140,10 @@ Full documentation for the `useVideo` hook can be found [below](#usevideo-contex
           showFullScreenButton={false}
         >
           <VideoPlayer.Source
-            src="/brand/assets/example.mp4"
+            src="https://primer.github.io/brand/assets/example.mp4"
             type="video/mp4"
           />
-          <VideoPlayer.Track src="/brand/assets/example.vtt" />
+          <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
         </VideoPlayer>
         <Stack direction="horizontal">
           <Button onClick={() => togglePlaying()}>
