--- a/apps/docs/content/components/CTABanner/index.mdx
+++ b/apps/docs/content/components/CTABanner/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: CTA banner
-description: Use the CTA banner component to draw attention to or create urgency around a user action.
+description: Use the CTA banner component to highlight and create urgency around user actions.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
@@ -50,7 +50,7 @@ The actions used in a CTA banner are normally the same as the ones used on the [
 
 ### Align
 
-The CTA banner elements can be aligned to the start or center of the page. By default, the CTA banner is aligned to the start of the page. Use the center alignment if context calls for it. E.g. Use the left alignement if there's a background image on the right side of the page or center align if the CTA banner is placed between two sections that are centered aligned to not break the visual flow.
+The CTA banner elements can be aligned to the start or center of the page. By default, the CTA banner is aligned to the start of the page. Use the center alignment if context calls for it. E.g. Use the left alignment if there's a background image on the right side of the page or center align if the CTA banner is placed between two sections that are centered aligned to not break the visual flow.
 
 ### Styles
 
@@ -127,7 +127,7 @@ The CTA banner has a shadow around the component to give it a sense of depth and
     />
     <Caption>
       Don't use the shadow and the background together if you want the content
-      to blend with the background and the sections that sorround the CTA
+      to blend with the background and the sections that surround the CTA
       banner.
     </Caption>
   </Dont>
@@ -162,6 +162,7 @@ The CTA banner can render a border around the component giving further separatio
 
 ## Related components
 
+- [BreakoutBanner](/components/BreakoutBanner): To break up content on longer pages and highlight important information.
 - [Hero](/components/Hero): To display a large heading and a description with a button group.
 - [Section intro](/components/SectionIntro): To provide a title, description and a link to a new section in the page.
 - [River](/components/River): To display a list of content items with a visual asset.
