update position dont image

--- a/apps/docs/content/components/BreakoutBanner/index.mdx
+++ b/apps/docs/content/components/BreakoutBanner/index.mdx
@@ -54,7 +54,7 @@ Breakout banners should be used in the middle of a page, to break up existing co
   </Dont>
 </DoDontContainer>
 
-### Align
+### Alignment
 
 The content of the breakout banner can be aligned to the start or center of the page, with the former being the default. Use the center alignment if context calls for it. E.g. Use center alignment if the breakout banner is placed between two sections that are also centered aligned to avoid breaking the visual flow.
 
