--- a/apps/docs/content/components/BreakoutBanner/index.mdx
+++ b/apps/docs/content/components/BreakoutBanner/index.mdx
@@ -22,9 +22,7 @@ import dontLeadingVisual from './images/dont-leading-visual.png'
 import doLeadingVisualColor from './images/do-leading-visual-color.png'
 import dontLeadingVisualColor from './images/dont-leading-visual-color.png'
 
-## Overview
-
-Use breakout banners to break up long, repetitive content sections and promote important information and actions.
+Use breakout banners to promote important information and actions in-between blocks of content.
 
 Whereas the CTA banner is intended to redirect users to their respective conversion outlets, links in the breakout banner should only cross-link to supporting content.
 
@@ -37,7 +35,7 @@ Whereas the CTA banner is intended to redirect users to their respective convers
 
 ## Usage
 
-Breakout banners should be used in the middle of a page, to break up existing content. Avoid using the breakout banner at the beginning or towards the end of a page.
+Breakout banners should be used in the middle of a page to break up long blocks of content. Avoid using the breakout banner at the beginning or towards the end of a page.
 
 <DoDontContainer>
   <Do>
@@ -47,16 +45,18 @@ Breakout banners should be used in the middle of a page, to break up existing co
   <Dont>
     <img src={dontPosition} alt="" />
     <Caption>
-      Don't use the breakout banner too early or late in the page. Prefer CTA
-      banner in case of the latter. Also avoid placing the breakout banner too
-      close to related components like the CTA banner.
+      Don't use the breakout banner too early or late in the page (E.g. near the
+      footer). Prefer CTA banner in case of the latter. Also avoid placing the
+      breakout banner too close to related components like the CTA banner.
     </Caption>
   </Dont>
 </DoDontContainer>
 
 ### Alignment
 
-The content of the breakout banner can be aligned to the start or center of the page, with the former being the default. Use the center alignment if context calls for it. E.g. Use center alignment if the breakout banner is placed between two sections that are also centered aligned to avoid breaking the visual flow.
+The breakout banner content can be aligned to the start or center of the parent element, with the former being the default. Use the center alignment if context calls for it.
+
+E.g. Use center alignment if the breakout banner is placed between two sections that are also centered aligned to avoid breaking the visual flow.
 
 <DoDontContainer>
   <Do>
@@ -73,7 +73,7 @@ The content of the breakout banner can be aligned to the start or center of the 
 
 ### Use sparingly
 
-Breakout banners should be used sparingly, at most once per page. This is to avoid diluting the impact of the spotlighted content and links in the context of the entire page.
+Breakout banners should be used sparingly, at most once per page. This is to avoid diluting the impact of the spotlighted content or links in the context of the wider page.
 
 <DoDontContainer>
   <Do>
