document LogoSuite changes

--- a/apps/docs/content/components/LogoSuite/index.mdx
+++ b/apps/docs/content/components/LogoSuite/index.mdx
@@ -3,7 +3,6 @@ title: Logo suite
 description: Use a logo suite to present a list logos, such as sponsors or vendors.
 ---
 
-import CustomVideoPlayer from '../../../src/components/custom-video-player'
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
@@ -22,7 +21,7 @@ Use the logo suite component to showcase a list of logos, such as for clients, s
 
 A logo suite is intended to build credibility, trust, and provide social proof by displaying consistent logos.
 
-Logo suite should be used for groups of logos more than 4 and less than 12. In scenarios hoping to showcase more than 12 logos, considering stacking two components together. To create the best visual consistency and balance, rearrange and resize the logos when necessary to create similar area distribution and attention to each of the logos.
+Logo suite should be used for groups of logos more than 4 and less than 12. To create the best visual consistency and balance, rearrange and resize the logos when necessary to create similar area distribution and attention to each of the logos.
 
 ### Arrangement
 
@@ -107,7 +106,7 @@ Logo suite should be used for groups of logos more than 4 and less than 12. In s
 The logo suite offers three appearance options:
 
 - `muted`: The muted option is suitable for displaying 6+ logos and displays logos in a `secondary` color. It allows for two rows of logos, maintaining a clean and organized appearance.
-- `emphasis`: The emphasis option is designed for spotlighting ~5 logos in the `primary` color. It displays logos larger, drawing more attention to the logos.
+- `emphasis`: The emphasis option is designed for spotlighting 5 or fewer logos in the `primary` color. It displays logos larger, drawing more attention to the logos.
 - `marquee`: The marquee option provides a flowing logo animation and can accommodate up to 12 logos. It is ideal for scenarios with limited page real estate.
 
 All three options on the logo bar contains an optional divider. This divider can serve as a visual separator. These three options can be used adjacently.
@@ -129,8 +128,8 @@ All three options on the logo bar contains an optional divider. This divider can
     alt=""
   />
   <Caption>
-    The emphasis option can be used to spotlight logos. It is best used with 6
-    or less logos to create 1 row.
+    The emphasis option can be used to spotlight logos. It is best used with 5
+    or fewer logos to create 1 row.
   </Caption>
 </div>
 
