add missing quotes

--- a/apps/docs/content/components/ComparisonTable.mdx
+++ b/apps/docs/content/components/ComparisonTable.mdx
@@ -358,13 +358,13 @@ This variant is suitable for embedding into long-form content, or in situations 
 
 ### ComparisonTable <Label>Required</Label>
 
-| name                          | type                                                                                    | default     | required | description                                                                                                                                               |
-| ----------------------------- | --------------------------------------------------------------------------------------- | ----------- | -------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `children`                    | `ComparisonTable.Row`, `ComparisonTable.Cell`, `ComparisonTable.Footnotes`, `ReactNode` | undefined   | `true`   | Valid children. Accepts `ReactNode` for conditional rendering.                                                                                            |
-| `heading`                     | `string`                                                                                | undefined   | `false`  | Optional heading that appears above table, preconfigured as a `h3`.                                                                                       |
-| `featuredColumn`              | `number`                                                                                | `1`         | `false`  | Indicates that the data column at the specified index is visually important and unique in relation to its adjacent cells, and will be styled accordingly. |
-| `visuallyHiddenFeaturedLabel` | `string`                                                                                | `featured`  | `false`  | A visually-hidden label which is appended to the end of the column title. Used to identify the featured column to screen reader users.                    |
-| `variant`                     | `"default"`, `"minimal"`                                                                | `"default"` | `false`  | Applies alternative presentation.                                                                                                                         |
+| name                          | type                                                                                    | default      | required | description                                                                                                                                               |
+| ----------------------------- | --------------------------------------------------------------------------------------- | ------------ | -------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `children`                    | `ComparisonTable.Row`, `ComparisonTable.Cell`, `ComparisonTable.Footnotes`, `ReactNode` | undefined    | `true`   | Valid children. Accepts `ReactNode` for conditional rendering.                                                                                            |
+| `heading`                     | `string`                                                                                | undefined    | `false`  | Optional heading that appears above table, preconfigured as a `h3`.                                                                                       |
+| `featuredColumn`              | `number`                                                                                | `1`          | `false`  | Indicates that the data column at the specified index is visually important and unique in relation to its adjacent cells, and will be styled accordingly. |
+| `visuallyHiddenFeaturedLabel` | `string`                                                                                | `"featured"` | `false`  | A visually-hidden label which is appended to the end of the column title. Used to identify the featured column to screen reader users.                    |
+| `variant`                     | `"default"`, `"minimal"`                                                                | `"default"`  | `false`  | Applies alternative presentation.                                                                                                                         |
 
 ### ComparisonTable.Row <Label>Required</Label>
 
