--- a/apps/docs/content/components/LogoSuite/index.mdx
+++ b/apps/docs/content/components/LogoSuite/index.mdx
@@ -49,31 +49,6 @@ Logo suite should be used for groups of logos more than 4 and less than 12. To c
   </Dont>
 </DoDontContainer>
 
-### Contextual information
-
-<DoDontContainer stacked>
-  <Do>
-    <img
-      src="https://github.com/primer/brand/assets/131988618/79680b75-9e3b-4eb1-9371-2d8ee45a6dc1"
-      alt=""
-    />
-    <Caption>
-      Do publish the logo suite with context. Introduce the logos and, when
-      applicable, share how the logos have been grouped together.
-    </Caption>
-  </Do>
-  <Dont>
-    <img
-      src="https://github.com/primer/brand/assets/131988618/5ab14ace-9c9e-425f-8b5c-73de82340733"
-      alt=""
-    />
-    <Caption>
-      Don’t use the logo suite without a heading/description. Consider turning
-      off a visible description if needed.
-    </Caption>
-  </Dont>
-</DoDontContainer>
-
 ### Color uniformity
 
 <DoDontContainer stacked>
@@ -109,6 +84,8 @@ The logo suite offers three appearance options:
 - `emphasis`: The emphasis option is designed for spotlighting 5 or fewer logos in the `primary` color. It displays logos larger, drawing more attention to the logos.
 - `marquee`: The marquee option provides a flowing logo animation and can accommodate up to 12 logos. It is ideal for scenarios with limited page real estate.
 
+The `muted` and `emphasis` variants will automatically be applied if they are not specified. The `muted` variant will be applied if there are 6 or more logos, and the `emphasis` variant will be applied if there are 5 or fewer logos.
+
 All three options on the logo bar contains an optional divider. This divider can serve as a visual separator. These three options can be used adjacently.
 
 <div>
@@ -117,8 +94,8 @@ All three options on the logo bar contains an optional divider. This divider can
     alt=""
   />
   <Caption>
-    Use the default muted option when displaying 6-12 logos across two rows. 2
-    rows (when using 6-12 logos).
+    Use the muted option when displaying 6-12 logos across two rows. 2 rows
+    (when using 6-12 logos).
   </Caption>
 </div>
 
