--- a/apps/docs/content/components/LogoSuite/react.mdx
+++ b/apps/docs/content/components/LogoSuite/react.mdx
@@ -204,7 +204,7 @@ A heading element must be present as it serves as a navigation hook for assistiv
 ```jsx live
 <>
   <LogoSuite align="start">
-    <LogoSuite.Heading>Start</LogoSuite.Heading>
+    <LogoSuite.Description>Start</LogoSuite.Description>
     <LogoSuite.Logobar>
       <svg role="img" viewBox="0 0 300 100">
         <title>Placeholder logo</title>
@@ -222,7 +222,7 @@ A heading element must be present as it serves as a navigation hook for assistiv
   </LogoSuite>
   <br />
   <LogoSuite align="justify">
-    <LogoSuite.Heading>Justified</LogoSuite.Heading>
+    <LogoSuite.Description>Justified</LogoSuite.Description>
     <LogoSuite.Logobar>
       <svg role="img" viewBox="0 0 300 100">
         <title>Placeholder logo</title>
