--- a/apps/docs/content/components/LogoSuite/react.mdx
+++ b/apps/docs/content/components/LogoSuite/react.mdx
@@ -249,7 +249,8 @@ Logobars using the `emphasis` variant will appear with relatively higher contras
 
 ```jsx live
 <LogoSuite>
-  <LogoSuite.Heading visuallyHidden>Emphasis</LogoSuite.Heading>
+  <LogoSuite.Heading visuallyHidden>Emphasis example</LogoSuite.Heading>
+  <LogoSuite.Description>Emphasis</LogoSuite.Description>
   <LogoSuite.Logobar variant="emphasis">
     <svg
       role="img"
@@ -331,7 +332,8 @@ Logobars using the `emphasis` variant will appear with relatively higher contras
 </LogoSuite>
 <br />
 <LogoSuite>
-  <LogoSuite.Heading visuallyHidden>Muted</LogoSuite.Heading>
+  <LogoSuite.Heading visuallyHidden>Muted example</LogoSuite.Heading>
+  <LogoSuite.Description>Muted</LogoSuite.Description>
   <LogoSuite.Logobar variant="muted">
     <svg
       role="img"
@@ -441,4 +443,4 @@ Forwards all props from the [Text component](/components/Text), including `as`, 
 | `children`     | <PropTableValues values={[`SVGElement`, `SVGElement[]`, `HTMLImageElement`, `HTMLImageElement[]`]} addLineBreaks /> | `undefined` | Logobar requires SVG or Image elements to render correctly |
 | `marquee`      | `boolean`                                                                                                           | `false`     | Enables an optional marquee effect.                        |
 | `marqueeSpeed` | <PropTableValues values={['slow', 'normal', 'idle']} addLineBreaks />                                               | `'normal'`  | The speed of the marquee effect.                           |
-| `variant`      | <PropTableValues values={['default', 'muted', 'emphasis']} addLineBreaks />                                         | `'default'` | The stylistic variant of the LogoBar.                      |
+| `variant`      | <PropTableValues values={['muted', 'emphasis']} addLineBreaks />                                                    | `undefined` | The stylistic variant of the LogoBar.                      |
