--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -19,7 +19,7 @@ import {VideoPlayer} from '@primer/react-brand'
 ```jsx live
 <VideoPlayer title="GitHub media player">
   <VideoPlayer.Source src="/brand/assets/example.mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Track src="/brand/assets/example.vtt" default/>
 </VideoPlayer>
 ```
 
@@ -31,7 +31,7 @@ import {VideoPlayer} from '@primer/react-brand'
   title="GitHub media player"
 >
   <VideoPlayer.Source src="/brand/assets/example.mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Track src="/brand/assets/example.vtt" default/>
 </VideoPlayer>
 ```
 
@@ -40,7 +40,7 @@ import {VideoPlayer} from '@primer/react-brand'
 ```jsx live
 <VideoPlayer showBranding={false} title="GitHub media player">
   <VideoPlayer.Source src="/brand/assets/example.mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Track src="/brand/assets/example.vtt" default/>
 </VideoPlayer>
 ```
 
@@ -49,7 +49,7 @@ import {VideoPlayer} from '@primer/react-brand'
 ```jsx live
 <VideoPlayer visuallyHiddenTitle title="GitHub media player">
   <VideoPlayer.Source src="/brand/assets/example.mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Track src="/brand/assets/example.vtt" default/>
 </VideoPlayer>
 ```
 
@@ -66,7 +66,7 @@ import {VideoPlayer} from '@primer/react-brand'
   showFullScreenButton={false}
 >
   <VideoPlayer.Source src="/brand/assets/example.mp4" type="video/mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Track src="/brand/assets/example.vtt" default/>
 </VideoPlayer>
 ```
 
@@ -75,7 +75,7 @@ import {VideoPlayer} from '@primer/react-brand'
 ```jsx live
 <VideoPlayer title="GitHub media player" showControlsWhenPaused={false}>
   <VideoPlayer.Source src="/brand/assets/example.mp4" type="video/mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Track src="/brand/assets/example.vtt" default/>
 </VideoPlayer>
 ```
 
@@ -89,7 +89,7 @@ import {VideoPlayer} from '@primer/react-brand'
   showControlsWhenPaused={false}
 >
   <VideoPlayer.Source src="/brand/assets/example.mp4" type="video/mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Track src="/brand/assets/example.vtt" default/>
 </VideoPlayer>
 ```
 
@@ -101,7 +101,7 @@ import {VideoPlayer} from '@primer/react-brand'
   playIcon={() => <PlayIcon size={96} />}
 >
   <VideoPlayer.Source src="/brand/assets/example.mp4" type="video/mp4" />
-  <VideoPlayer.Track src="/brand/assets/example.vtt" />
+  <VideoPlayer.Track src="/brand/assets/example.vtt" default/>
 </VideoPlayer>
 ```
 
@@ -131,7 +131,7 @@ Full documentation for the `useVideo` hook can be found [below](#usevideo-contex
             src="/brand/assets/example.mp4"
             type="video/mp4"
           />
-          <VideoPlayer.Track src="/brand/assets/example.vtt" />
+          <VideoPlayer.Track src="/brand/assets/example.vtt" default/>
         </VideoPlayer>
         <Stack direction="horizontal">
           <Button onClick={() => togglePlaying()}>
